2006-10-19  Alexander Dupuy  <alex.dupuy@counterstorm.com>

	* perl/BkReportGen/helper_df.pl (helper_df): #8572: verify entries from
	/proc/self/dev/ to avoid spurious close errors

2006-10-10  Alexander Dupuy  <alex.dupuy@counterstorm.com>

	* perl/BkReportGen/helper_df.pl (helper_df): #8514: work around bug in
	bash-3.1 (no, really!) where 10>&- etc. don't actually close fds > 9

2006-10-05  Alexander Dupuy  <alex.dupuy@counterstorm.com>

	* perl/BkReportGen/helper_df.pl (helper_df): #8514: avoid LVM gripes
	about "file descriptor # left open"
	
2006-09-27  Alex Dupuy  <alex.dupuy@counterstorm.com>

	* perl/BkReportGen/helper_df.pl (helper_df): add LVM2 PV and LV stats

	* perl/BkReportGen/helper_raid.pl (helper_raid): REALLY actually
	get health and details for software RAID on FC5 (this *never* worked!)

	* perl/BkReportGen/helper_raid.pl (helper_raid): #8079: do 3ware RAID;
	
2006-09-26  Alexander Dupuy  <alex.dupuy@counterstorm.com>

	* perl/BkReportGen/helper_smart.pl (helper_smart): parse smartctl exit
	#8079: handle -d device option for SATA and 3ware RAID
	
2006-04-17  James Tanis  <jtt@swift.sysdetect.com>

	* Baka/NetUtils.pm (netmask_from_bits($): Create a netmask from a
	bit length argument.

2006-03-30  Seth Robertson  <seth@startide.sysdetect.com>

	* perl/BkReportGen/helper_loadaverage.pl
	(helper_loadaverage($$$$)): Ensure 1 and 15 minute load averages
	are over thresholds instead of just 15 minute, so that a high load
	average problem that was resolved will no longer be alarmed on.

2006-03-21  James Tanis  <jtt@swift.sysdetect.com>

	* lib/installlib.pl (start_job($$;$)): Use -Default- queue endrun
	for submitting jobs.

2006-02-01  James Tanis  <jtt@swift.sysdetect.com>

	* Baka/StructuredConf.pm: Convience function to return value of a
	key without derefercing yourself.

2005-08-10  Alex Dupuy  <alex.dupuy@counterstorm.com>

	* bin/BkReportGen: need Baka::Conf

2005-08-04  James Tanis  <jtt@cheviot.sysdetect.com>
